@@ -13,8 +13,8 @@ repositories {
 
 // กำหนดเวอร์ชันและโมดูลของ JavaFX ที่ต้องใช้
 javafx {
-    version = "17" // สามารถเปลี่ยนเป็น 21 ได้ถ้าใช้ JDK 21
-    modules = [ 'javafx.controls', 'javafx.graphics' ]
+    version = "24.0.1" // สามารถเปลี่ยนเป็น 21 ได้ถ้าใช้ JDK 21
+    modules = [ 'javafx.controls', 'javafx.graphics' , 'javafx.media']
 }
 
 dependencies {
@@ -30,4 +30,8 @@ test {
 // กำหนดคลาสหลัก (Main Class) เพื่อให้รันผ่าน Gradle ได้
 application {
     mainClass = 'application.Main'
+
+    applicationDefaultJvmArgs = [
+            '--enable-native-access=javafx.graphics,javafx.media,ALL-UNNAMED'
+    ]
 }
